# model-photograph

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.yaml
docs/: README.md
